--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="1">    
 <title>Wenzi Community</title>
 <link href="WGC.css" rel="stylesheet" type="text/css"/>
+  <meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
 <div class="WENZI">Wenzi Community</div>
