--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
+  <style>
+  div {
+  font-size:30px;
+  }
 <div class="WENZI">Wenzi Community</div>
 <div>ᅠᅠ</div>
 <div>Добро пожаловать на наш сайт, здесь ты можешь скачать лаунчер нашего сервера, а также вступить в наш дискорд сервер, все ссылки на скачивание находяться на нашем дискорд сервере.</div>
