--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 <div class="WENZI2">Благотворительность и развитие</div>
 <div>ᅠᅠ</div>
 <div>Чтобы помочь нам с Развитием сервера и сайтов, над которыми нам тоже приходится старатся, мы тоже должны получать хоть какую нибудь денежную поддержку чтобы развивать наш труд всё выше и выше.</div>
+  </style>   
 </body>
 </html>
