--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <div class="WENZI2">Благотворительность и развитие</div>
 <div>ᅠᅠ</div>
 <div>Чтобы помочь нам с Развитием сервера и сайтов, над которыми нам тоже приходится старатся, мы тоже должны получать хоть какую нибудь денежную поддержку чтобы развивать наш труд всё выше и выше.</div>
+<div>    </div>
+<div>Спасибо что посетили нашу страницу, мы будем рады видеть тут снова.</div>    
   </style>   
 </body>
 </html>
