--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
 </head>
 <body>
     <style>
-    div {
-        font-size:30px;
-    }
+ .WENZI {
+    color:aqua;
+    font-size: 50px;
+    background-color:purple;
+    border: 1px solid black;
+}
+
+a {
+    color:black;
+    font-size:30px;
+}
+
+div {
+    font-size:30px;
+}
+
+.WENZI2 {
+    color: crimson;
+    font-size: 50px;
+    background-color:purple;
+    border: 1px solid black;
+}
     </style>
     <div class="WENZI">Wenzi Community</div>
 <div>ᅠᅠ</div>
