--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@ div {
     background-color:purple;
     border: 1px solid black;
 }
+
+.Donation {
+    color: green;
+}
     </style>
     <div class="WENZI">Wenzi Community</div>
 <div>ᅠᅠ</div>
@@ -41,5 +45,7 @@ div {
 <div class="WENZI2">Благотворительность и развитие</div>
 <div>ᅠᅠ</div>
 <div>Чтобы помочь нам с Развитием сервера и сайтов, над которыми нам тоже приходится старатся, мы тоже должны получать хоть какую нибудь денежную поддержку чтобы развивать наш труд всё выше и выше.</div>
+<div>ᅠᅠ</div>
+<div>Поддержка нашей работы <a id="Donation" href="https://golife.easydonate.ru">GoLifeDonation</a></div>
 </body>
 </html>
