--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@ div {
     border: 1px solid black;
 }
 
-.Donation {
-    color: green;
+.WENZI3 {
+    color:white;
+    font-size: 13px;
+    background-color: black;
+    border: 1px solid black;
+    padding-bottom:65px;
+    padding-left:550px;
 }
     </style>
     <div class="WENZI">Wenzi Community</div>
@@ -47,5 +52,7 @@ div {
 <div>Чтобы помочь нам с Развитием сервера и сайтов, над которыми нам тоже приходится старатся, мы тоже должны получать хоть какую нибудь денежную поддержку чтобы развивать наш труд всё выше и выше.</div>
 <div>ᅠᅠ</div>
 <div>Поддержка нашей работы <a id="Donation" href="https://golife.easydonate.ru">GoLifeDonation</a></div>
+<div>ᅠᅠ</div>
+<div class="WENZI3">© 2022 Права защищены WGCommunity</div>
 </body>
 </html>
