--- a/index.html
+++ b/index.html
@@ -1,27 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="1">    
+<title>Wenzi Community</title>
+<link href="style.css" rel="stylesheet" type="text/css"/>
 <meta name="viewport" content="width=device-width">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="style.css" rel="stylesheet" type="text/css"/>
-<title>Технические работы</title>
 </head>
 <body>
     <style>
-    .WORK {
-          color:red;
-          font-size: 70px;
-          padding-left: 300px;
-    }
+ .WENZI {
+    color:aqua;
+    font-size: 50px;
+    background-color:purple;
+    border: 1px solid black;
+}
 
-    .WORK2 {
-        color:gray;
-        font-size: 50px;
-        padding-left:480px;
-    }
+a {
+    color:black;
+    font-size:30px;
+}
+
+div {
+    font-size:30px;
+}
+
+.WENZI2 {
+    color: crimson;
+    font-size: 50px;
+    background-color:purple;
+    border: 1px solid black;
+}
+
+.WENZI3 {
+    color:white;
+    font-size: 13px;
+    background-color: black;
+    border: 1px solid black;
+    padding-bottom:65px;
+    padding-left:550px;
+}
     </style>
-<div class="WORK">ТЕХНИЧЕСКИЕ РАБОТЫ</div>
-<div class="WORK2">Обновление сайта</div>
+    <div class="WENZI">Wenzi Community</div>
+<div>ᅠᅠ</div>
+<div>Добро пожаловать на наш сайт, здесь ты можешь скачать лаунчер нашего сервера, а также вступить в наш дискорд сервер, все ссылки на скачивание находяться на нашем дискорд сервере.</div>
+<div>Отвечаем на вопросы в дискорде!</div>
+<div>ᅠᅠ</div>
+<div>Наш дискорд сервер <a id="discord" href="https://discord.gg/Mq9VWhkH8s">Wenzi Games Community</a></div>
+<div>ᅠᅠ</div>
+<div class="WENZI2">Благотворительность и развитие</div>
+<div>ᅠᅠ</div>
+<div>Чтобы помочь нам с Развитием сервера и сайтов, над которыми нам тоже приходится старатся, мы тоже должны получать хоть какую нибудь денежную поддержку чтобы развивать наш труд всё выше и выше.</div>
+<div>ᅠᅠ</div>
+<div>Поддержка нашей работы <a id="Donation" href="https://golife.easydonate.ru">GoLifeDonation</a></div>
+<div>ᅠᅠ</div>
+<a image="https://cdn.discordapp.com/attachments/990518520259440670/990631697601142804/unknown.png"
+<div class="WENZI3">© 2022 Права защищены WGCommunity</div>
 </body>
 </html>
