--- a/page2.html
+++ b/page2.html
@@ -22,6 +22,15 @@
 div {
     font-size:30px;
 }
+
+.WENZI3 {
+    color:white;
+    font-size: 13px;
+    background-color: black;
+    border: 1px solid black;
+    padding-bottom:65px;
+    padding-left:550px;
+}
 </style>
 <body>
 <div class="Pedia">WGCPedia</div>
@@ -55,6 +64,6 @@ div {
 <div></div>
 <div></div>
 <div></div>
-<div></div>
+<div class="WENZI3">© 2022 Права защищены WGCommunity<div class="red"><img src="https://cdn.discordapp.com/attachments/990518520259440670/990631697601142804/unknown.png" width="60" weight="60"></div>
 </body>
 </html>
