--- a/page2.html
+++ b/page2.html
@@ -57,13 +57,13 @@ div {
 <div>ᅠᅠ</div>
 <div>Копим средства на поддержку в украину!</div>
 <div>ᅠᅠ</div>
-<div>Скоро будет новая информация... + если мы сможем купить хост заменяющий атернос для лаунчера, то серв будет процветать</div>
+<div>Мы не оскорбляем никого на сервере!</div>
 <div>ᅠᅠ</div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
+<div>OilFrt может работать до 3:02.</div>
+<div>ᅠᅠ</div>
+<div class="player">Главные</div>
+<div>ᅠᅠ</div>
+<div>OilFrt | Wenzi Games | Mitis | Sk1pe</div>
 <div class="WENZI3">© 2022 Права защищены WGCommunity<div class="red"><img src="https://cdn.discordapp.com/attachments/990518520259440670/990631697601142804/unknown.png" width="60" weight="60"></div>
 </body>
 </html>
