--- a/page2.html
+++ b/page2.html
@@ -31,6 +31,13 @@ div {
     padding-bottom:65px;
     padding-left:550px;
 }
+
+.player {
+    color:aqua;
+    font-size:60px;
+    background-color:black;
+    border: 1px solid black;
+}
 </style>
 <body>
 <div class="Pedia">WGCPedia</div>
