--- a/index.html
+++ b/index.html
@@ -1,84 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="1">    
-<title>Wenzi Community</title>
-<link href="style.css" rel="stylesheet" type="text/css"/>
-<meta name="viewport" content="width=device-width">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta charset="UTF-8">
+<title>WGCMaintenance</title>
 </head>
-<body>
-    <style>
- .WENZI {
-    color:aqua;
-    font-size: 50px;
-    background-color:purple;
-    border: 1px solid black;
-}
-
-a {
-    color:black;
-    font-size:30px;
-}
-
-div {
-    font-size:30px;
-}
-
-.WENZI2 {
-    color: crimson;
-    font-size: 50px;
-    background-color:purple;
-    border: 1px solid black;
-}
-
-.WENZI3 {
-    color:white;
-    font-size: 13px;
-    background-color: black;
-    border: 1px solid black;
-    padding-bottom:65px;
-    padding-left:550px;
-}
-
-.red {
-    padding-left:100px;
-}
-
-.WENZI4 {
-    color:aqua;
-    font-size: 50px;
-    background-color:purple;
-    border: 1px solid black;   
-}
-
-    </style>
-<div class="WENZI">Wenzi Community</div>
-<div>ᅠᅠ</div>
-<div>Добро пожаловать на наш сайт, здесь ты можешь скачать лаунчер нашего сервера, а также вступить в наш дискорд сервер, все ссылки на скачивание находяться на нашем дискорд сервере.</div>
-<div>Отвечаем на вопросы в дискорде!</div>
-<div>Перед тем как играть на сервере, нужно прочитать правила в дискорде, и если кто то нарушает правила, обратитесь в администрацию, а иначе может плохой конец и для вас!</div>
-<div>Название сервера GoLife</div>
-<div>ᅠᅠ</div>
-<div>Наш дискорд сервер <a id="discord" href="https://discord.gg/Mq9VWhkH8s">Wenzi Games Community</a></div>
-<div>ᅠᅠ</div>
-<div class="WENZI2">Благотворительность и развитие</div>
-<div>ᅠᅠ</div>
-<div>Чтобы помочь нам с Развитием сервера и сайтов, над которыми нам тоже приходится старатся, мы тоже должны получать хоть какую нибудь денежную поддержку чтобы развивать наш труд всё выше и выше.</div>
-<div>ᅠᅠ</div>
-<div>Поддержка нашей работы <a id="Donation" href="https://golife.easydonate.ru">GoLifeDonation</a></div>
-<div>ᅠᅠ</div>
-<div class="WENZI4">Благодарности и Разработчики</div>
-<div>ᅠᅠ</div>
-<div>Wenzi Games - Создатель сервера, является очень отличным создателем.</div>
-<div>OilFrt - Дизайнер сервера, является html-программистом, а также настроил данный сайт.</div>
-<div>Mitis - Технический Администратор сервера, является py-программистом, также создавший бота который отвечает за выключение и включение сервера.</div>
-<div>Скип - Старший Дизайнер сервера, оформлял сервер.</div>
-<div>Вы тоже можете оказатся на этом месте если хоть как нибудь поможете нам!</div>
-<p style="font-size: 20px; color:#1F9AFE;">
-    <a href="page2.html">WGCPedia</a>
-    </p>
-<br></br>
-<div class="WENZI3">© 2022 Права защищены WGCommunity<div class="red"><img src="https://cdn.discordapp.com/attachments/990518520259440670/990631697601142804/unknown.png" width="60" weight="60"></div>
-</body>
+<Body>
+<div><font size="25" color="red" face="Arial">Технические Работы!</font></div>
+<div></div>
+<div><font face="Arial">Сайт находится на проверке работоспособности!</font></div>
+<div></div>
+<div><font face="Arial">Если сайт будет работоспособен, то вы увидете не глобальные, но крутые изменения!</font></div>
+</Body>
 </html>
