--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <Body>
 <div><font size="25" color="red" face="Arial">Технические Работы!</font></div>
-<div></div>
+<div>ᅠᅠ</div>
 <div><font face="Arial">Сайт находится на проверке работоспособности!</font></div>
-<div></div>
+<div>ᅠᅠ</div>
 <div><font face="Arial">Если сайт будет работоспособен, то вы увидете не глобальные, но крутые изменения!</font></div>
 </Body>
 </html>
