--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 <title>WGCMaintenance</title>
 </head>
 <Body>
-<div><font size="25" color="red" face="Arial">Технические Работы!</font></div>
+<div><font size="25" color="red" face="Arial">Закрыто</font></div>
 <div>ᅠᅠ</div>
-<div><font face="Arial">Сайт находится на проверке работоспособности!</font></div>
-<div>ᅠᅠ</div>
-<div><font face="Arial">Если сайт будет работоспособен, то вы увидете не глобальные, но крутые изменения!</font></div>
+<div><font face="Arial">Сайт закрыт!</font></div>
 </Body>
 </html>
